--- a/data/config.json
+++ b/data/config.json
@@ -36,7 +36,7 @@
       "filters":[
          {
                "dataId":"nyctrips",
-               "enlarged":false,
+               "enlarged":true,
                "id":"09vn5a0of",
                "name":"timestamp",
                "plotType":"histogram",
