--- a/data/config.json
+++ b/data/config.json
@@ -49,20 +49,17 @@
             }
          ],
          "interactionConfig":{
-            "tooltip": {
-                "fieldsToShow": {
-                  "nyctrips": [
-                    "timestamp",
-                    "Label1",
-                    "Label2",
-                    "Label3"
-                  ]
-                },
-                "enabled": true
-            },
             "brush":{
                "enabled":false,
                "size":0.5
+            },
+            "tooltip":{
+               "enabled":false,
+               "fieldsToShow":{
+                  "nyctrips":[
+                     "timestamp"
+                  ]
+               }
             }
          },
          "layerBlending":"additive",
