--- a/data/config.json
+++ b/data/config.json
@@ -53,6 +53,14 @@
                "enabled":false,
                "size":0.5
             },
+            "tooltip":{
+               "enabled":false,
+               "fieldsToShow":{
+                  "nyctrips":[
+                     "timestamp"
+                  ]
+               }
+            }
          },
          "layerBlending":"additive",
          "layers":[
