--- a/data/config.json
+++ b/data/config.json
@@ -51,7 +51,7 @@
          "interactionConfig":{
             "tooltip": {
                 "fieldsToShow": {
-                  "earthquakes": [
+                  "nyctrips": [
                     "timestamp",
                     "label1",
                     "label2",
