--- a/data/config.json
+++ b/data/config.json
@@ -62,7 +62,7 @@
          "interactionConfig":{
             "tooltip": {
                 "fieldsToShow": {
-                  "09vn5a0of": [
+                  "o1bohfz7": [
                     "timestamp",
                     "label1",
                     "label2",
