--- a/data/config.json
+++ b/data/config.json
@@ -50,7 +50,12 @@
          ],
          "interactionConfig":{
             "tooltip":{
-               "enabled":false
+               "enabled":false,
+               "fieldsToShow":{
+                  "nyctrips":[
+                     "timestamp"
+                  ]
+               }
             },
             "brush":{
                "enabled":false,
