--- a/data/config.json
+++ b/data/config.json
@@ -108,7 +108,7 @@
                   "nyctrips":[
                      "timestamp",
                      "label1",
-                     "labdl2",
+                     "label2",
                      "label3",
                      "x"
                   ]
