--- a/data/config.json
+++ b/data/config.json
@@ -112,6 +112,10 @@
                   ]
                },
                "enabled":true
+            },
+            "brush":{
+               "enabled":false,
+               "size":0.5
             }
          },
          "splitMaps":[
