--- a/data/config.json
+++ b/data/config.json
@@ -69,8 +69,9 @@
                      },
                      "isVisible": true,
                      "visConfig": {
-                       "opacity": 6,
-                       "thickness": 6,
+                       "opacity": 0.3,
+                       "thickness": 0.3,
+                        "stroke": 6,
                        "colorRange": {
                          "name": "Global Warming",
                          "type": "sequential",
