--- a/data/config.json
+++ b/data/config.json
@@ -70,8 +70,7 @@
                      "isVisible": true,
                      "visConfig": {
                        "opacity": 0.3,
-                       "thickness": 0.3,
-                        "stroke": 6,
+                       "thickness": 0.8,
                        "colorRange": {
                          "name": "Global Warming",
                          "type": "sequential",
@@ -118,7 +117,7 @@
                   },
                   "dataId":"nyctrips",
                   "isVisible":true,
-                  "label":"deplacement",
+                  "label":"points",
                   "visConfig":{
                      "colorRange":{
                         "category":"Uber",
