--- a/data/config.json
+++ b/data/config.json
@@ -70,7 +70,8 @@
                      "isVisible": true,
                      "visConfig": {
                        "opacity": 0.3,
-                       "thickness": 0.8,
+                       "thickness": 0.3,
+                       "radius": 6,
                        "colorRange": {
                          "name": "Global Warming",
                          "type": "sequential",
@@ -89,9 +90,9 @@
                          10
                        ],
                        "targetColor": [
-                         228,
-                         155,
-                         0
+                         149,
+                         12,
+                         105
                        ],
                        "hi-precision": false
                      }
