--- a/data/config.json
+++ b/data/config.json
@@ -40,6 +40,7 @@
                "id":"09vn5a0of",
                "name":"timestamp",
                "plotType":"histogram",
+               "step": 0.01,
                "type":"timeRange",
                "value":[
                    1421352890000,
