--- a/data/config.json
+++ b/data/config.json
@@ -42,10 +42,23 @@
                "plotType":"histogram",
                "type":"timeRange",
                "value":[
-                   1421352890000,
-                   1421352890000
+                   "2017-05-01 00:10:38",
+                   "2017-05-01 00:11:02"
                ],
                "yAxis":null
+            },
+         {
+               "dataId": "bus",
+               "id": "xagpk5xes",
+               "name": "bus_id",
+               "type": "range",
+               "value": [
+                 3000,
+                 3002
+               ],
+               "enlarged": false,
+               "plotType": "histogram",
+               "yAxis": null
             }
          ],
          "layerBlending":"additive",
