--- a/data/config.json
+++ b/data/config.json
@@ -45,6 +45,7 @@
                    1493644683,
                    1493644723
                ],
+               "enlarged": false,
                "yAxis":null
             },
          {
