--- a/data/config.json
+++ b/data/config.json
@@ -42,10 +42,10 @@
                "plotType":"histogram",
                "type":"timeRange",
                "value":[
-                   1493597438,
-                   1493597675
+                   "2017-05-01 00:10:38",
+                   "2017-05-01 00:11:02"
                ],
-               "yAxis":null,
+               "yAxis":null
             },
          {
                "dataId": "bus",
