--- a/data/config.json
+++ b/data/config.json
@@ -153,6 +153,14 @@
                         50
                      ],
                      "thickness":2
+                  },
+                  textLabel: {
+                     "field": "prochain_arret",
+                     "color": [255,255,255],
+                     "size" : 18,
+                     "xOffset": 0,
+                     "yOffset": 0,
+                     "anchor": "middle"
                   }
                },
                "id":"4bonnee",
