--- a/data/config.json
+++ b/data/config.json
@@ -154,7 +154,7 @@
                      ],
                      "thickness":2
                   },
-                  textLabel: {
+                  "textLabel": {
                      "field": null,
                      "color": [255,255,255],
                      "size" : 18,
