--- a/data/config.json
+++ b/data/config.json
@@ -154,12 +154,7 @@
                      ],
                      "thickness":2,
                      "textLabel": {
-                       "field": "prochain_arret",
-                       "color": [255,255,255],
-                       "size" : 18,
-                       "xOffset": 0,
-                       "yOffset": 0,
-                       "anchor": "middle"
+                       "field": "prochain_arret"
                      }
                   }
                },
