--- a/data/config.json
+++ b/data/config.json
@@ -141,7 +141,10 @@
                            "#F1920E",
                            "#FFC300"
                         ],
-                        "type":"sequential"
+                        "type":"sequential",
+                        "textLabel": {
+                          "field": "prochain_arret"
+                        }
                      },
                      "fixedRadius":false,
                      "hi-precision":false,
@@ -153,9 +156,6 @@
                         50
                      ],
                      "thickness":2,
-                     "textLabel": {
-                       "field": "prochain_arret"
-                     }
                   }
                },
                "id":"4bonnee",
