--- a/data/config.json
+++ b/data/config.json
@@ -152,13 +152,16 @@
                         0,
                         50
                      ],
-                     "thickness":2,
+                     "thickness":2
                   },
                   "textLabel": {
-                    "field": "prochain_arret",
-                    "color": [255,255,255],
-                    "size" : 18
-                 }
+				    "field": "prochain_arret",
+					"color": [255, 255, 255],
+					"size": 18,
+					"offset": [0, 0],
+					"anchor": 'start',
+					"alignment": 'center'
+				 }
                },
                "id":"4bonnee",
                "type":"point",
