--- a/data/config.json
+++ b/data/config.json
@@ -174,7 +174,7 @@
                      "code_iti",
                      "Arret precedent",
                      "Arret suivant",
-                     "Delai réel",
+                     "Délai réel",
                      "Prédiction RATP",
                      "Prédiction IA"
                   ]
