--- a/data/config.json
+++ b/data/config.json
@@ -174,9 +174,7 @@
                      "code_iti",
                      "Arret precedent",
                      "Arret suivant",
-                     "Délai réel",
-                     "Prédiction RATP",
-                     "Prédiction IA"
+                     "Délai réel"
                   ]
                },
                "enabled":true
