--- a/data/config.json
+++ b/data/config.json
@@ -171,7 +171,12 @@
                   "bus":[
                      "timestamp",
                      "bus_id",
-                     "code_iti"
+                     "code_iti",
+                     "Arret precedent",
+                     "Arret suivant",
+                     "Délai Réel",
+                     "Prédiction RATP",
+                     "Prédiction IA"
                   ]
                },
                "enabled":true
