--- a/data/config.json
+++ b/data/config.json
@@ -53,7 +53,7 @@
                "name":"bus_id",
                "id":"09vn5a0of",
                "type": "select",
-               "value": ["B3001"]
+               "multiSelect": ["B3001", "B3100"]
             }
          ],
          "layerBlending":"additive",
