--- a/data/config.json
+++ b/data/config.json
@@ -48,12 +48,10 @@
                "yAxis":null
             },
          {
-               "dataId":"bus",
-               "enlarged":true,
-               "name":"bus_id",
-               "id":"09vn5a0of",
+               "name": "id",
                "type": "select",
-               "multiSelect": ["B3001", "B3100"]
+               "fieldIdx": "bus_id",
+               "value": ["B3001"]
             }
          ],
          "layerBlending":"additive",
