--- a/data/config.json
+++ b/data/config.json
@@ -166,8 +166,11 @@
                      "timestamp",
                      "bus_id",
                      "code_iti",
+                     "Arret suivant",
+                     "Arret precedent",
                      "Délai réel",
-                     "Prédiction RATP"
+                     "Prédiction RATP",
+                     "Prédiction IA"
                   ]
                },
                "enabled":true
