--- a/data/config.json
+++ b/data/config.json
@@ -166,6 +166,7 @@
                      "timestamp",
                      "bus_id",
                      "code_iti",
+                     "Arret suivant",
                      "Arret precedent",
                      "Délai réel",
                      "Prédiction RATP",
