--- a/data/config.json
+++ b/data/config.json
@@ -167,10 +167,10 @@
                      "bus_id",
                      "code_iti",
                      "Arret suivant",
+                     "Arret precedent",
                      "Délai réel",
                      "Prédiction RATP",
-                     "Prédiction IA",
-                     "Arret precedent"
+                     "Prédiction IA"
                   ]
                },
                "enabled":true
