--- a/data/config.json
+++ b/data/config.json
@@ -53,6 +53,13 @@
                "name": "bus_id",
                "type": "select",
                "value": ["B3001", "B3100", "B3102", "B3108", "B3111", "B3112", "B3113"]
+            },
+         {
+               "dataId":"bus",
+               "id":"09vn5a0of",
+               "name": "code_iti",
+               "type": "select",
+               "value": ["ITI:54", "ITI:55", "ITI:56", "ITI:57"]
             }
          ],
          "layerBlending":"additive",
