--- a/data/config.json
+++ b/data/config.json
@@ -66,7 +66,7 @@
          "layers":[
                  {
                    "id": "jhivvbj",
-                   "type": "arc",
+                   "type": "geojson",
                    "config": {
                      "dataId": "bus",
                      "label": "deplacement",
@@ -76,10 +76,7 @@
                        0
                      ],
                      "columns": {
-                       "lat0": "y",
-                       "lng0": "x",
-                       "lat1": "y1",
-                       "lng1": "x1"
+                       "geojson": "geometry"
                      },
                      "isVisible": true,
                      "visConfig": {
