--- a/data/config.json
+++ b/data/config.json
@@ -38,7 +38,7 @@
                "dataId":"bus",
                "enlarged":true,
                "id":"09vn5a0of",
-               "name":"timestamp",
+               "name":"hour",
                "plotType":"histogram",
                "type":"timeRange",
                "value":[
