--- a/data/config.json
+++ b/data/config.json
@@ -52,7 +52,7 @@
                "id":"09vn5a0of",
                "name": "timestamp",
                "type": "select",
-               "value": ["2017-05-01", "2017-05-02", "2017-05-03", "2017-05-04", "2017-05-05", "2017-05-06"]
+               "value": ["2017-05-01", "2017-05-02", "2017-05-03", "2017-05-04", "2017-05-05", "2017-05-06", "2017-05-07"]
             },
          {
                "dataId":"bus",
