--- a/data/config.json
+++ b/data/config.json
@@ -52,14 +52,14 @@
                "id":"09vn5a0of",
                "name": "timestamp",
                "type": "select",
-               "value": ["2017-05-01", "2017-05-02", "2017-05-03", "2017-05-04", "2017-05-05", "2017-05-06", "2017-05-07"]
+               "value": ["2017-05-06"]
             },
          {
                "dataId":"bus",
                "id":"09vn5a0of",
                "name": "bus_id",
                "type": "select",
-               "value": ["B3001", "B3100", "B3102", "B3108", "B3111", "B3112", "B3113", "B3028", "B3050", "B3051", "B3099", "B3103", "B3105", "B3107", "B3114", "B3101", "B8780", "B8787", "B8804", "B3104", "B3106", "B3109"]
+               "value": ["B3001", "B3100", "B3108", "B3112", "B3028", "B3051", "B3099", "B3105", "B3107", "B3114", "B3101", "B3104", "B3106", "B3109"]
             },
          {
                "dataId":"bus",
