--- a/data/config.json
+++ b/data/config.json
@@ -59,7 +59,7 @@
                "id":"09vn5a0of",
                "name": "bus_id",
                "type": "select",
-               "value": ["B3001", "B3100", "B3108", "B3112", "B3028", "B3051", "B3099", "B3105", "B3107", "B3114", "B3101", "B3104", "B3106", "B3109"]
+               "value": ["B3001", "B3028", "B3051", "B3099", "3100", "B3101", "B3104", "B3105", "B3106", "B3107", "B3108", "B3109", "B3112", "B3114"]
             },
          {
                "dataId":"bus",
